<resources>
    <string name="app_name">Expense Bucket</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email or number</string>
    <string name="sign_in">Sign In</string>
    <string name="description">Description</string>
    <string name="add_transaction">New Activity</string>
    <string name="update_transaction">Edit Activity</string>
    <string name="delete">Delete</string>
    <string name="expense_desc">Expense</string>
    <string name="income_desc">Income</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>