<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/app_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_name_txt"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="-24dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/off_white"
        app:cardCornerRadius="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingTop="52dp"
            android:paddingRight="24dp"
            android:paddingBottom="24dp">

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_edt"
                android:autofillHints=""
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/forgotPass_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_edt"
                android:layout_alignParentEnd="true"
                android:text="@string/forgot_password" />

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/forgotPass_txt"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/or_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_in_btn"
                android:layout_centerHorizontal="true"
                android:text="OR" />

            <Button
                android:id="@+id/google_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/or_txt"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/google_logo"
                android:gravity="start|center_vertical"
                android:text="      Continue with Google"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/fb_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/google_btn"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/fb_logo"
                android:gravity="start|center_vertical"
                android:text="      Continue with Facebook"
                android:textColor="@color/black" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>